# blueos-ppp

./: Dockerfile  README.md
app/: main.py  ppp_process.py  pyproject.toml  settings.py
app/static/: index.html  register_service
